[package]
name = "fallacy-hash"
version = "0.1.0"
authors = ["David Li <davidli2010@foxmail.com>"]
edition = "2021"
rust-version = "1.57"
readme = "README.md"
license = "MIT OR Apache-2.0"
description = "A library for fallible hash collections."
keywords = ["fallible", "hash", "collection",]
repository = "https://github.com/fallacy-rs/fallacy-hash.git"
homepage = "https://github.com/fallacy-rs/fallacy-hash"
documentation = "https://docs.rs/fallacy-hash/"

[dependencies]
fallacy-alloc = "0.1.0"
fxhash = "0.2.1"
serde = { version = "1.0.136", optional = true }
